--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
     <title>Седона. Городок в Аризоне</title>
   </head>
-  <body>
+  <body class="page-index">
     <header class="page-header" data-test="header">
       <nav class="navigation">
         <a class="navigation-logo" href="#">
-          <img class="page-header-logo" src="#">
+          <img class="page-header-logo" src="#" alt="Логотип">
         </a>
        <ul class="navigation-list">
         <li class="navigation-item">
-          <a class="navigation-link" href="#">Главная</a>
+          <a class="navigation-link" href="#" area-current="page">Главная</a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">О Седоне</a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          <a class="navigation-link" href="catalog.html" >Гостиницы</a>
         </li>
 
        </ul>
@@ -26,12 +26,12 @@
        <ul class="navigation-user">
         <li class="navigation-user-item">
           <a class="navigation-user-link" href="#">
-            <span class="visyalli-hidden">Поиск</span>
+            <span class="visually-hidden">Поиск</span>
           </a>
         </li>
         <li class="navigation-user-item">
           <a class="navigation-user-link" href="#">
-            <span class="visyalli-hidden">Избранное</span>
+            <span class="visually-hidden">Избранное</span>
             <span class="navigation-badge">12</span>
           </a>
         </li>
@@ -41,7 +41,111 @@
       <a class="header-button" href="#">Хочу сюда!</a>
 
     </header>
+    <main class="main-index">
+     <section class="hero">
+      <h1 class="visually-hidden">Добро пожаловать в небольшой городок Седона</h1>
+      <img src="#" class="hero-img" alt="Welcome to the gorgeous Sedona, because the Grand Canyon sucks!">
+     </section>
+     <section class="reasons">
+      <h2 class="visually-hidden">Причины</h2>
+      <p class="reasons-slogan">Седона — небольшой городок в Аризоне,
+        заслуживающий большего!</p>
+        <p class="reasons-desc">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+     </section>
+     <section class="advantages">
+      <ul class="advantage-list">
+        <li class="advantage-item">
+          <h3 class="advantages-item-title">Настоящий городок</h3>
+          <p class="advantage-item-slogan">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <img src="#" alt="Дома">
+        </li>
+        <li class="advantage-item">
+          <h3 class="advantages-item-title">Небольшая площадь</h3>
+          <p class="advantage-item-slogan">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="advantage-item">
+          <h3 class="advantages-item-title">Красивая дорога</h3>
+          <p class="advantage-item-slogan">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li class="advantage-item">
+          <h3 class="advantages-item-title">Мало туристов</h3>
+          <p class="advantage-item-slogan">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+        <li class="advantage-item">
+          <h3 class="advantages-item-title">Там есть мост дьявола</h3>
+          <p class="advantage-item-slogan">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <img src="#" alt="Каньон">
+        </li>
 
+      </ul>
+    </section>
+    <section class="benefits">
+      <h3 class="benefits-text">Приезжайте в Седону отдохнуть в комфорте и уюте!</h3>
+      <p>Опытный персонал и качественное обслуживание!</p>
+      <ul class="benefits-list">
+        <li class="benefits-item">
+          <h3 class="benefits-item-title">Жильё</h3>
+          <p class="benefits-item-text">Рекомендуем пожить в настоящем мотеле,
+            всё как в кино!</p>
+
+        </li>
+        <li class="benefits-item">
+          <h3 class="benefits-item-title">Еда</h3>
+          <p class="benefits-item-text">Всегда заказывайте
+            топовый фирменный бургер, вы не разочаруетесь!</p>
+
+        </li>
+        <li class="benefits-item">
+          <h3 class="benefits-item-title">Сувениры</h3>
+          <p class="benefits-item-text">Не только китайского,
+            но и настоящего местного производства!</p>
+
+        </li>
+
+      </ul>
+    </section>
+
+    <section class="hotel-search">
+     <h2 class="visually-hidden">Поиск гостиницы</h2>
+     <p class="hotel-search-title">Заинтересовались?</p>
+     <p class="hotel-search-text">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+     <button class="hotel-search-button" type="button">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+    </section>
+    </main>
+    <section class="subscribe">
+      <h2 class="visually-hidden">Подпишись</h2>
+      <p class="subscribe-title">Подпишитесь на рассылку</p>
+      <p class="subscribe-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <form action="https://echo.htmlacademy.ru/." method="post" class="subscribe-form">
+        <input class="subscribe-email" type="email" name="email" placeholder="Ваш e-mail">
+        <input type="submit" name="podpisatsya" value="Подписаться">
+      </form>
+    </section>
+    <footer class="site-footer">
+      <ul class="footer-list">
+        <li class="footer-item">
+          <a class="social-link-vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener">
+            <span class="visually-hidden">ВКонтакте</span>
+          </a>
+        </li>
+        <li class="footer-item">
+          <a class="social-link-vk" href="https://t.me/htmlacademy" target="_blank" rel="noopener">
+            <span class="visually-hidden">Телеграм</span>
+          </a>
+        </li>
+        <li class="footer-item">
+          <a class="social-link-vk" href="https://www.youtube.com/user/htmlacademyru" target="_blank" rel="noopener">
+            <span class="visually-hidden">Ютуб</span>
+          </a>
+        </li>
+
+      </ul>
+      <a class="site-footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+      <a class="site-footer-logo" href="https://htmlacademy.ru/">
+        <span class="visually-hidden">htmlacademy.ru</span>
+      </a>
+
+    </footer>
 
   </body>
 </html>
